--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "a": "react-native run-android",
     "i": "react-native run-ios",
+    "cc": "cd android && gradlew clean && cd ..",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
@@ -17,8 +18,10 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
